@@ -2,6 +2,6 @@ package com.jacob.backend.responses.exceptions;
 
 public class PasswordMismatchException extends RuntimeException {
     public PasswordMismatchException(String pass, String passConfirm) {
-        super(String.format("Password Confirmation Error: %s does not match %s", passConfirm, pass));
+        super("Password Confirmation Error: %s does not match %s".formatted(passConfirm, pass));
     }
 }
